# oauth-demo

./: README.md  docker-compose.yml
albert_api/: .gitignore  Dockerfile  app.py  pyproject.toml
albert_api/factory/: __init__.py  routes.py
albert_db/mysql/: .gitignore
albert_ui/: .eslintrc.js  .gitignore  Dockerfile  babel.config.js  constants.js  index_template.ejs  package-scripts.js  package.json  webpack.config.js  wps.config.js
albert_ui/src/: App.js  constants.js
nginx/: nginx.conf
